examples/eks-managed-node-group/ingress/glw/glw-site.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glw-site
  namespace: glw
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: prod-alpha-07
    alb.ingress.kubernetes.io/success-codes: 200-399
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-1-2021-06
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:975049889333:certificate/eef64955-e30c-4d66-b36a-2b464e68e2fe
spec:
  rules:
    - host: glw.com.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glw-site-svc
                port:
                  number: 80
    - host: www.glw.com.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glw-site-svc
                port:
                  number: 80
    - host: test.glw.com.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glw-site-svc
                port:
                  number: 80
