examples/eks-managed-node-group/ingress/glw/landalt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-glwco-wp
  namespace: glw
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: prod-alpha-07
    alb.ingress.kubernetes.io/success-codes: 200-399
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: '80'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-1-2021-06
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=3600
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:975049889333:certificate/eef64955-e30c-4d66-b36a-2b464e68e2fe
spec:
  ingressClassName: alb
  rules:
  - host: landing.glw.com.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glw-landalt-svc
            port:
              number: 80
  - host: land.glw.com.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glw-landalt-svc
            port:
              number: 80
